# data-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKUP_AND_RESTORE_REPORT.md  BUSINESS_OS_1_3_DEPLOYMENT_EVIDENCE.json  BUSINESS_OS_1_3_DEPLOYMENT_REPORT.md  BUSINESS_OS_1_3_FINAL_EXECUTIVE_REPORT.md  BUSINESS_OS_1_3_FINAL_RELEASE_CERTIFICATION.md  BUSINESS_OS_1_3_PRODUCTION_CERTIFICATION.md  BUSINESS_OS_1_3_PRODUCTION_HEALTH.md  BUSINESS_OS_1_3_RELEASE_CHECKLIST.md  BUSINESS_OS_1_3_RELEASE_EVIDENCE.json  BUSINESS_OS_1_3_RUNTIME_VALIDATION.md  BUSINESS_OS_1_4_ARCHITECTURE_REPORT.md  BUSINESS_OS_1_4_CANONICAL_KNOWLEDGE_MODEL.md  BUSINESS_OS_1_4_CERTIFICATION.md  BUSINESS_OS_1_4_CHANGE_INVENTORY.md  BUSINESS_OS_1_4_CONNECTOR_FRAMEWORK.md  BUSINESS_OS_1_4_CORRELATION_REPORT.md  BUSINESS_OS_1_4_ENTITY_RESOLUTION_REPORT.md  BUSINESS_OS_1_4_EVIDENCE.json  BUSINESS_OS_1_4_EXECUTIVE_REPORT.md  BUSINESS_OS_1_4_KNOWLEDGE_FUSION_REPORT.md  BUSINESS_OS_1_5_CERTIFICATION.md  BUSINESS_OS_1_5_CHANGE_INVENTORY.md  BUSINESS_OS_1_5_DISCOVERY_REPORT.md  BUSINESS_OS_1_5_EVIDENCE.json  BUSINESS_OS_1_5_EXECUTIVE_REPORT.md  BUSINESS_OS_1_5_HEALTH_REPORT.md  BUSINESS_OS_1_5_LIFECYCLE_REPORT.md  BUSINESS_OS_1_5_OPPORTUNITY_MODEL.md  BUSINESS_OS_1_5_RANKING_REPORT.md  BUSINESS_OS_1_5_SCORING_REPORT.md  BUSINESS_OS_5_0_UEL_ADR.md  BUSINESS_OS_5_0_UEL_EVIDENCE.json  BUSINESS_OS_5_1_LEDGER_ACTIVATION_EVIDENCE.json  BUSINESS_OS_5_1_LEDGER_ADR.md  BUSINESS_OS_5_1_LEDGER_EVIDENCE.json  BUSINESS_OS_STAGE_3_6_ARCHITECTURE_AUDIT.md  (+61 more)
ai/: CONTEXT.md  DOC_SYNC_RULES.md  RUNBOOK.md
alembic/: env.py
(+1020 files in other folders)
