[project]
name = "data-core"
version = "0.1.0"
description = "Modular backend for data collectors, scheduling, storage, logs, retries, and REST APIs."
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "fastapi==0.115.0",
    "playwright==1.47.0",
    "psycopg[binary]==3.2.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-json-logger==2.0.7",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

